# project-watch

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: NavigationListener.tsx
src/components/layout/: AppShell.tsx  MainNav.tsx  ThemeToggle.tsx  UserMenu.tsx  index.ts
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dropdown.tsx  Input.tsx  ProgressBar.tsx  Skeleton.tsx  Spinner.tsx  Toast.tsx  index.ts
src/features/dashboard/: index.ts  sample-data.ts  types.ts
src/features/dashboard/components/: Dashboard.tsx  EmptyState.tsx  index.ts  (+4 more)
src/features/project-detail/: index.ts  sample-data.ts  types.ts
src/features/projects-board/: index.ts  sample-data.ts  types.ts
src/features/settings/: index.ts  sample-data.ts  types.ts
src/hooks/: index.ts  useGitHubIssuesSync.ts  useGitHubRefresh.ts  useGitRefresh.ts  useMediaQuery.ts  useTheme.ts
src/pages/: Dashboard.tsx  Help.tsx  ProjectDetail.tsx  ProjectsBoard.tsx  Settings.tsx  index.ts
src/pages/help/: About.tsx  FAQ.tsx  Features.tsx  GettingStarted.tsx  Shortcuts.tsx  index.ts
src/pages/settings/: GeneralSettings.tsx  GitHubSettings.tsx  NotificationsSettings.tsx  ProjectsSettings.tsx  index.ts
src/services/: github.ts  index.ts  notifications.ts  tauri.ts
src/stores/: documentationStore.ts  index.ts  projectStore.ts  settingsStore.ts  taskStore.ts  toastStore.ts
src/types/: documentation.ts
(+18 files in other folders)
